--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "echo 'hi'; serve -s _static -l tcp://0.0.0.0:$PORT -n"
   },
   "dependencies": {
     "react": "^18.2.0",
