--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "chess-tournament-sorting",
-  "main": "index.html",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "echo 'hi'; serve -s _static -l tcp://0.0.0.0:$PORT -n"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "serve": "^14.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
